--- a/src/Feature/Account/platform/Views/Feature/Wealth/Account/MemberSettings/_InfoSetting.cshtml
+++ b/src/Feature/Account/platform/Views/Feature/Wealth/Account/MemberSettings/_InfoSetting.cshtml
@@ -1,5 +1,6 @@
 ﻿@model Feature.Wealth.Account.Models.OAuth.FcbMemberModel
 @using Feature.Wealth.Account.Models.OAuth
+@using Feature.Wealth.Account.Helpers
 @using Foundation.Wealth.Helper;
 
 @{
@@ -33,7 +34,7 @@
         <div class="c-section__title">Email通知</div>
         <div class="c-section__content">
             <div class="l-flex u-flex-col u-flex-gap-sm">
-                @if (!string.IsNullOrEmpty(member.WebBankId))
+                @if (!string.IsNullOrEmpty(member.WebBankId) && FcbMemberHelper.BranchCanUseConsult())
                 {
                     <div class="l-flex__item">
                         <div class="c-box u-padding-md u-padding-xl@dt-only">
