--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/Consult.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/Consult.cshtml
@@ -190,7 +190,7 @@
                                     <div class="c-form__content">
                                         <div class="l-form" id="l-form-phone">
                                             <div class="l-form__input">
-                                                <input id="input-tel" type="tel" class="o-textbox o-textbox--full o-textbox--form" placeholder="輸入聯絡電話">
+                                                <input id="input-tel" type="tel" class="o-textbox o-textbox--full o-textbox--form" value="@(Model.Phone)" placeholder="輸入聯絡電話">
                                             </div>
                                             <div class="l-form__text l-form__text--error">
                                                 <div class="o-errorText"><span class="s4">請輸入有效連絡電話</span></div>
@@ -205,7 +205,7 @@
                                     <div class="c-form__content">
                                         <div class="l-form" id="l-form-mail">
                                             <div class="l-form__input">
-                                                <input id="input-email" type="email" class="o-textbox o-textbox--full o-textbox--form" placeholder="輸入電子信箱">
+                                                <input id="input-email" type="email" class="o-textbox o-textbox--full o-textbox--form" value="@(Model.Mail)" placeholder="輸入電子信箱">
                                             </div>
                                             <div class="l-form__text l-form__text--error">
                                                 <div class="o-errorText"><span class="s4">請輸入有效電子信箱</span></div>
