Update:多判斷在解鎖專屬推薦時，風險屬性不能為空字串

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/EducationFund.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/EducationFund.cshtml
@@ -2204,7 +2204,7 @@
 
             //#region 解鎖專屬推薦方法
             function unlockRecommendations(data) {
-                if (data.success && data.risk != undefined) {
+                if (data.success && data.risk != undefined && data.risk != "") {
                     SC_DATA.Risk = data.risk;
 
                     setTimeout(function (e) {
