--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/BuyHouse.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/BuyHouse.cshtml
@@ -2205,7 +2205,7 @@
 
             //#region 解鎖專屬推薦方法
             function unlockRecommendations(data) {
-                if (data.success && data.risk != undefined) {
+                if (data.success && data.risk != undefined && data.risk != "") {
                     SC_DATA.Risk = data.risk;
 
                     setTimeout(function (e) {
