update: 基金、ETF搜尋壓縮回傳json

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
@@ -603,6 +603,8 @@
                     var query = apiRequest('@ClientRoute.GenerateUrl(this, "EtfSearch", "GetSearchResultData")');
 
                     query.then((data) => {
+                        console.log(data)
+                        data = DecompressData(data);
                         console.log(data);
                         this.Result.List = data;
                         if (data) {
