--- a/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/__SharedLayout.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/__SharedLayout.cshtml
@@ -157,6 +157,7 @@
             "/themes/vendor/highcharts/modules/boost.js",
             "/themes/js/formula.min.js",
             "/themes/js/jspdf.umd.min.js",
+            "/themes/js/pako.min.js",
             "/themes/js/dom-to-image.min.js",
             "/themes/js/filter.min.js",
             "/themes/js/plugins.min.js",
