update: 調整js註解，避免razor解析

--- a/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
@@ -248,7 +248,7 @@
         }
         /**
         * 解壓縮並解析 Base64 編碼的 GZip 壓縮數據
-        * @param {string} base64String - 經過 Base64 編碼的 GZip 壓縮字串       
+        * @@param {string} base64String - 經過 Base64 編碼的 GZip 壓縮字串       
         */
         window.DecompressData = function(base64String) {
             let binaryString = atob(base64String);
