Update : 優化市場新聞相關元件

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/MarketNewsSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/MarketNewsSearch.cshtml
@@ -739,8 +739,8 @@
                         type: 'POST',
                         data: params,
                     }).done(function (data, textStatus, jqXHR) {
-                        console.log(data);
 
+                        data = DecompressData(data);
                         initFilter(data);
 
                         if (isMarketNewsFirstCall) {
