update:調整基金詳細頁 最低點排除第一筆資料問題

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
@@ -3499,7 +3499,7 @@
                                                 maxValue = point.y;
                                                 maxPoint = point;
                                             }
-                                            if (!minValue || minValue > point.y) {
+                                            if ((!minValue && minValue !== 0) || minValue > point.y) {
                                                 minValue = point.y;
                                                 minPoint = point;
                                             }
