update: 調整會員資訊牌卡風險評估彈窗並能選擇平台

--- a/src/Feature/Account/platform/Views/Feature/Wealth/Account/MemberCard/MemberCard.cshtml
+++ b/src/Feature/Account/platform/Views/Feature/Wealth/Account/MemberCard/MemberCard.cshtml
@@ -16,9 +16,6 @@
     }
     var memberSettingUrl = MemberRelatedLinkHelper.GetMemberSettingUrl();
     var memberReserveUrl = MemberRelatedLinkHelper.GetReserveConsultingUrl();
-    var WebKycLink = Settings.GetSetting("WebKYC");
-    var FirsteKycLink = Settings.GetSetting("FirsteKYC");
-    var IleoKycLink = Settings.GetSetting("IleoKYC");
 }
 <div class="l-mainstage l-mainstage--member">
     <div class="l-mainstage__wrap">
@@ -72,11 +69,11 @@
                                             }
                                             <b>@riskName</b>
                                             <br>
-                                            <a href="@WebKycLink" target="_blank" rel="noopener noreferrer" class="o-link t4 @(member.IsKycExpire ? string.Empty : "u-hidden")" id="GoKYC">進行風險屬性評估</a>
+                                            <a href="#popupGoKyc" data-popup="true" class="o-link t4 @(member.IsKycExpire ? string.Empty : "u-hidden")" id="GoKYC">進行風險屬性評估</a>
                                         }
                                         else
                                         {
-                                            <a href="@WebKycLink" target="_blank" rel="noopener noreferrer" class="o-link t4" id="GoKYC">進行風險屬性評估</a>
+                                            <a href="#popupGoKyc" data-popup="true" class="o-link t4" id="GoKYC">進行風險屬性評估</a>
                                         }
                                     </div>
                                 </div>
@@ -234,19 +231,5 @@
         }
     //加入class防止麵包屑被背景蓋住
         $('.l-navbar.l-navbar--gn').addClass('has-bg');
-        //行動裝置判斷
-        if ($(window).width() < 1199) {
-            let MobilePlatform = store.get("MobilePlatform") || "firste";
-            let url = "";
-            if (MobilePlatform == "firste") {
-                url = "@FirsteKycLink";
-                url.replaceAll('&amp;', '&');
-                document.getElementById('GoKYC').setAttribute('href', '@FirsteKycLink');
-            } else {
-                url = "@IleoKycLink";
-                url.replaceAll('&amp;', '&');
-                document.getElementById('GoKYC').setAttribute('href', '@IleoKycLink');
-            }
-        }
     })(jQuery, window, document);
 </script>
